--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "async": "^2.1.1",
     "fs": "0.0.1-security",
     "solc": "^0.4.2",
     "web3": "^0.17.0-beta"
